# huggingface-mcp-course

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
unit_2/mcp-client-gradio/: app.py  mcp_list.py
unit_2/mcp-sentiment/: app.py  mcp.json
unit_3/build-mcp-server/: server.py
